--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:launchMode ="singleTop"
         android:theme="@style/AppTheme">
         <activity android:name="com.example.brintaudientes.MainActivity">
             <intent-filter>
