--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:launchMode ="singleTop"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.brintaudientes.MainActivity">
+        <activity android:name="com.example.brintaudientes.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
