--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ android {
             }
         }
     }
+    sourceSets {
+        main {
+            java {
+                srcDirs 'src/main/java', 'src/test'
+            }
+        }
+    }
 }
 
 dependencies {
