--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,23 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.brintaudientes">
 
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:launchMode="singleTop"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
-        android:launchMode ="singleTop"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.brintaudientes.MainActivity"
+        <meta-data
+            android:name="io.sentry.dsn"
+            android:value="https://0d9d46871cd6458f9cba18cb087a903f@o508369.ingest.sentry.io/5600772" />
+        <activity
+            android:name="com.example.brintaudientes.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application >
+    </application>
 
 </manifest>
